Updating globals.css to ensure no horizontal scroll bar shows up

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,8 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     background-color: rgb(239 246 255 / var(--tw-bg-opacity)); /* Set your desired background color */
   }
   
